<resources>
    <string name="app_name">stopcoro</string>
    <string name="www_stoporo_com">www.stopcoro.com</string>
    <string name="close">Close</string>
    <string name="check_up">Checkup</string>
    <string name="back">Back</string>
    <string name="checkup_intro"><b>Rapid check-up</b>:\nNote that the following checkup is not a qualified medical diagnostic, it is only for informatory purposes and should not be used in emergency. In case of health emergency, call your local emergency number.</string>
    <string name="age">Age:</string>
    <string name="fill_age">fill age</string>
    <string name="do_you_experience_any_of_the_following_symptoms"><b>Do you experience any of the following symptoms?</b></string>
    <string name="difficulties_in_breathing">Difficulties in breathing</string>
    <string name="tiredness">Tiredness</string>
    <string name="fever">Fever</string>
    <string name="dry_cough">Dry cough</string>
    <string name="todo">TODO</string>
    <string name="contin">Continue</string>
    <string name="select_your_gender"><b>Select your gender</b></string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="no_symptoms">You don’t have COVID-19 symptoms, but it does not mean you are completely free from the disease. Stay home and respect the precautionary measures given by the ministry of health and the World Health Organization. Averagely, it takes about 5-6 days from when someone is infected with the virus when the symptoms manifest, however, it can take up to a maximum of 14 days.\n\nStay home, protect yourself and protect others!</string>
    <string name="a_rash_on_skin_or_discoloration_of_fingers_or_toes">A rash on skin, or discoloration of fingers or toes</string>
    <string name="loss_of_taste_or_smell">Loss of taste or smell</string>
    <string name="conjunctivitis">Conjunctivitis</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="head_aches">Head aches</string>
    <string name="chest_pain">Chest pain</string>
    <string name="loss_of_speech_sore_throat">Loss of speech, Sore throat</string>
    <string name="difficulties_in_breathing_or_shortness_of_breath">Difficulties in breathing or shortness of breath</string>
    <string name="precaution">Precautional\nMeasures</string>
    <string name="precautions"><b>About Coronavirus (COVID-19)</b>\n\nThe Coronavirus (COVID-19) disease is a pandemic disease identified as the cause the outbreak of respiratory diseases, first detected December 2019 in China, more precisely in the city of Wuhan, and latter on spread to the other parts of the world. At present date, all the continents are having cases of COVID-19.\n The disease has an incubation period (time elapsed from when a person is infected to when the first symptoms are manifested) of two to fourteen days, but in most cases, it takes about three to five days for the symptoms to manifest after infection.\n\n<b>What are the symptoms of coronavirus (COVID-19)?</b>\n COVID-19 symptoms may include:\n A dry cough fatigue, Fever, Difficulties in breathing, Loss of taste and smell, Chest pain, Sore throat, Diarrhea ,Conjunctivitis\n Some infected people will not forcefully develop all of there symptoms.\n\n
<b>How does COVID-19 spread?</b>\n
There is currently no vaccine to prevent COVID-19, the best way to do so for now is to avoid being exposed to this virus. The virus is thought spreads mainly from one person to another through the following ways.\n
-   Between people who are in close contact with one another (within about 6 feet).\n
-   Through respiratory droplets produced when an infected person coughs, sneezes or talks. These droplets can land in the mouths or nostrils of people who are nearby and possibly be inhaled into the lungs.\n
-   Some recent studies have suggested that COVID-19 may be spread by people who are not showing symptoms.
        \n\n\n<b>Wash your hands often!</b>\nWash your hands often with soap and water for at least 20 seconds especially after you have been in a public place, or after blowing your nose, coughing, or sneezing
If soap and water are not readily available, use a hand sanitizer that contains at least 60% alcohol. Cover all surfaces of your hands and rub them together until they feel dry.
Avoid touching your eyes, nose, and mouth with unwashed hands.
        \n\n\n<b>Cover your mouth and nose with a cloth face cover when around others</b>\n• It is possible for you to spread COVID-19 to others even if you do not feel sick.\n• Everyone should wear a cloth face cover when they have to go out in public, for example to the grocery store or to pick up other necessities.\n• The cloth face cover is meant to protect other people in case you are infected.\n• Continue to keep about 6 feet between yourself and others. The cloth face cover is not a substitute for social distancing.
        \n\n\n<b>Cover coughs and sneezes</b>\n• If you are in a private setting and do not have on your cloth face covering, remember to always cover your mouth and nose with a tissue when you cough or sneeze or use the inside of your elbow.\n • Throw used tissues in the trash.\n• Immediately wash your hands with soap and water for at least 20 seconds.\n\n\n<b>Clean and disinfect</b>\n• Clean AND disinfect frequently touched surfaces daily. This includes tables, doorknobs, light switches, countertops, handles, desks, phones, keyboards, toilets, faucets, and sinks.\n• If surfaces are dirty, clean them. Use detergent or soap and water prior to disinfection.
</string>
    <string name="finish">finish</string>
    <string name="sore_throat">Sore throat</string>
    <string name="do_you_suffer_from_any_of_the_following_diseases"><b>Do you suffer from any of the following diseases?</b></string>
    <string name="chronic_lung_disease_or_asthma">Chronic lung disease or asthma</string>
    <string name="chronic_kidney_disease">Chronic kidney disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="liver_disease">Liver disease</string>
    <string name="severe_obesity_body_mass_index_greater_than_or_equal_to_40">Severe obesity (body mass index greater than or equal to 40)</string>
    <string name="cancer">Cancer</string>
    <string name="you_are_likely_to_have_coronavirus_covid_19_you_should_stay_home_in_order_to_avoid_spreading_the_virus_in_case_you_are_infected_continue_monitoring_the_symptoms_stay_in_isolation_and_respect_the_barrier_measures_inform_your_contacts_about_your_present_situation_especially_those_with_whom_you_had_a_close_contact_and_ask_them_to_also_isolate_themselves_because_they_might_likely_have_been_contaminated_seek_immediate_medical_attention_if_you_have_serious_symptoms_always_call_before_you_visit_your_doctor_or_other_health_personnel"><font size='24' color='#EE0000'>You are likely to have coronavirus (COVID-19)!</font>\nYou should stay home in order to avoid spreading the virus in case you are infected. Continue monitoring the symptoms. Stay in isolation and respect the barrier measures. Inform your contacts about your present situation, especially those with whom you had a close contact, and ask them to also isolate themselves, because they might likely have been contaminated. Seek immediate medical attention if you have serious symptoms. Always call before you visit your doctor or other health personnel.</string>
    <string name="you_have_coro">You are likely to have coronavirus!\nThe distancing measures and stay in confinement in order to contain the virus. Inform your contacts about your present situation, especially those with whom you had close contacts, and ask them to also isolate themselves, because they have likely been contaminated. Avoid stress and physical activities, have enough rest. Hydrate your body by taking a lot of liquids like water, juice, etc. Call the emergency service of your region and inform them of your situation, they will tell you what to do. Make sure you respect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="can_you_freely_perform_basic_activities_such_as_getting_up_from_bed_eating_writing_speaking_walking_etc">Can you freely perform basic activities such as getting up from bed, eating, writing, speaking, walking, etc.</string>

</resources>
