<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FatalDiagnost">


    <android.support.constraint.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"
        app:layout_constraintGuide_begin="20dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/Flag"
            app:srcCompat="@drawable/flag" />

        <TextView
            android:id="@+id/fataltxt"
            style="@style/AppLink" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="444dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.533">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="15dp"
            android:text="@string/do_you_suffer_from_any_of_the_following_diseases"
            android:textColor="#100F0F"
            android:textSize="21sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp" />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/chronic_kidney_disease"
             />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/chronic_lung_disease_or_asthma"
             />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/diabetes"
             />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/liver_disease"
            />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/severe_obesity_body_mass_index_greater_than_or_equal_to_40"
            />

        <Switch
            style="@style/AppSwtich"
            android:text="@string/cancer"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35"
        app:layout_constraintVertical_bias="0.636">

        <Button
            android:id="@+id/backbutton"
            style="@style/BackButton"
           />

        <Button
            android:id="@+id/conbutton"
            style="@style/ContButton"
          />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>