<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SympDiagnostic">


    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"
        app:layout_constraintGuide_begin="20dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21">

        <ImageView
            style="@style/Flag"
            app:srcCompat="@drawable/flag" />

        <TextView
            android:id="@+id/symptxt"
           style="@style/AppLink"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/do_you_experience_any_of_the_following_symptoms"
            android:textColor="#0E0E0E"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/drycough"
            style="@style/AppSwtich"
            android:layout_marginTop="15dp"
            android:text="@string/dry_cough"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/fever"
            style="@style/AppSwtich"
            android:text="@string/fever"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/tiredness"
            style="@style/AppSwtich"
            android:text="@string/tiredness"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/breathing"
            style="@style/AppSwtich"
            android:text="@string/difficulties_in_breathing"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23"
        app:layout_constraintVertical_bias="0.825">

        <Button
            android:id="@+id/button3back"
            style="@style/BackButton"/>

        <Button
            android:id="@+id/button8con"
            style="@style/ContButton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>