<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"
        app:layout_constraintGuide_end="0dp" />

    <TextView
        style="@style/AppLink"
        android:id="@+id/maintxt"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/www_stoporo_com"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7">

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/ImageButton"
            app:srcCompat="@drawable/a"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton2"
            style="@style/ImageButton"
            app:srcCompat="@drawable/b"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="157dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <ImageButton
            android:id="@+id/imageButton3"
            style="@style/ImageButton"
            app:srcCompat="@drawable/c"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/imageButton4"
            style="@style/ImageButton"
            app:srcCompat="@drawable/d"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.535">

        <Button
            android:id="@+id/checkup"
            style="@style/APPButton"
            android:text="@string/check_up"
            />

        <Button
            android:id="@+id/precaution"
            style="@style/APPButton"
            android:text="@string/precaution"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="87dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10">

        <Button
            android:id="@+id/button3"
            style="@style/BackButton"
            />

        <Button
            android:id="@+id/buttonclose"
            style="@style/APPButton"
            android:drawableBottom="@drawable/ic_close_white_18dp"
            android:text="@string/close" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>